# surya

./: detect_layout.py  detect_text.py  ocr_app.py  ocr_text.py  pyproject-poetry.toml  pyproject.toml  reading_order.py  run_ocr_app.py  table_recognition.py
benchmark/: detection.py  gcloud_label.py  layout.py  ordering.py  pymupdf_test.py  recognition.py  table_recognition.py  tesseract_test.py
scripts/: verify_benchmark_scores.py
surya/: detection.py  languages.py  layout.py  ocr.py  ocr_error.py  ordering.py  recognition.py  schema.py  settings.py  tables.py
surya/benchmark/: bbox.py  metrics.py  tatr.py  tesseract.py  util.py
surya/input/: langs.py  load.py  pdflines.py  processing.py
surya/model/common/donut/: processor.py
surya/model/detection/: model.py  processor.py
surya/model/ordering/: config.py  decoder.py  encoderdecoder.py  model.py  processor.py
surya/model/recognition/: config.py  decoder.py  encoder.py  encoderdecoder.py  model.py  processor.py  tokenizer.py
surya/model/table_rec/: config.py  decoder.py  encoderdecoder.py  model.py  processor.py
surya/postprocessing/: affinity.py  fonts.py  heatmap.py  text.py  util.py
surya/postprocessing/math/: latex.py  render.py
surya/util/: parallel.py
